--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ h1{
 
 .tamanioTarjeta {
 
-    width: 1000px;
+      
     background-color: rgb(201, 245, 150);
     justify-content: center;
     text-align: center;
@@ -22,6 +22,7 @@ h1{
 
 .tarjeta img{
     justify-content: center;
+    align-items: center;
     width: 500px;
     
 }
