--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,224 +1,213 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Ubuntu:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;600&family=Ubuntu:wght@300&display=swap');
-
-
-h1{
-    color: rgb(255, 182, 87);
-    text-align: center;
-    font-size: 42px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;600&family=Ubuntu:wght@300&display=swap");
+h1 {
+  color: rgb(255, 182, 87);
+  text-align: center;
+  font-size: 42px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
 
 .tamanioTarjeta {
-
-      
-    background-color: rgb(201, 245, 150);
-    justify-content: center;
-    text-align: center;
-
+  list-style: none;
+  background-color: rgb(201, 245, 150);
+  justify-content: center;
+  text-align: center;
 }
 
-.tarjeta img{
-    justify-content: center;
-    align-items: center;
-    width: 500px;
-    
+.tarjeta img {
+  justify-content: center;
+  align-items: center;
+  width: 500px;
 }
 
-h2{
-    color: black;
-    height: 60px;
-    
-    text-align: center;
-    text-shadow: 0cm;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    background-color: rgb(255, 165, 237);
+h2 {
+  color: black;
+  height: 60px;
+  text-align: center;
+  text-shadow: 0cm;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 500;
+  background-color: rgb(255, 165, 237);
 }
 
-
-
-ul{
-    margin: 2%;
-    list-style: circle;
-    font-style: normal;
-    text-align: center;
-    color: black;
-
+ul {
+  margin: 2%;
+  list-style: none;
+  font-style: normal;
+  text-align: center;
+  color: black;
 }
+
 #pieDePagina {
-
-    color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
 .cuadrado {
-    background-color: rgb(57, 96, 96);
-    
+  background-color: rgb(57, 96, 96);
 }
 
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.caja{
-   
-    width: 505px;
-   padding-top: 20px;
-    padding: 10px;
-    padding-right: 1021px;
- /* padding-top: 10px;*/
-    border-color: rgb(160, 76, 76);
-    display: flex;
-    background-color: rgb(255, 165, 237);
-
+.caja {
+  width: 505px;
+  padding-top: 20px;
+  padding: 10px;
+  padding-right: 1021px;
+  /* padding-top: 10px;*/
+  border-color: rgb(160, 76, 76);
+  display: flex;
+  background-color: rgb(255, 165, 237);
 }
 
-.cajalista{
-    background-color: rgb(214, 244, 105);
-}
-.navbar ul li{
-    
-
-    display: inline-block;
-    background-color: rgb(214, 244, 105);
-    padding: 10px;   
-}
-.navbar{
-    width: 100%;
-    height: 80px;
-    background-color: rgb(164, 254, 240);
-    position: fixed;
-    z-index: 20;
+.cajalista {
+  background-color: rgb(214, 244, 105);
 }
 
-.tarjetainfo{
-
-    text-align: center;
-    display: block;
-    background-color: rgb(168, 255, 127);
-    
+.navbar ul li {
+  list-style: none;
+  display: inline-block;
+  background-color: rgb(214, 244, 105);
+  padding: 10px;
 }
 
-.tarjetas{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.navbar {
+  width: 100%;
+  height: 80px;
+  background-color: rgb(164, 254, 240);
+  position: fixed;
+  z-index: 20;
 }
 
-.tarjeta1{
-    
-    display: flex;
-    flex-direction: column;
-    width: 450px;
-    height: 450px;
-    align-items: center;
-    margin: 10px;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: rgb(138, 236, 154);
-
+.tarjetainfo {
+  text-align: center;
+  display: block;
+  background-color: rgb(168, 255, 127);
 }
 
-.tarjeta__titulo{
-    font-size: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.tarjetas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.tarjeta__text{
-    width: 380px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: end;
-    display: flex
-    
+.tarjeta1 {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  height: 450px;
+  align-items: center;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgb(138, 236, 154);
 }
 
-
-.tarjeta__img{
-    padding: 10px;
-    margin: 10px;
-    padding-left: 10px;
-    width: 420px;
+.tarjeta__titulo {
+  font-size: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-
-.hijo{
-    height: 450px;
-
-    width: 380px;
-    display: flex;
-    flex-direction: column;
-    
-    
-
+.tarjeta__text {
+  width: 380px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-align: end;
+  display: flex;
 }
 
-.pp{
-    
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.tarjeta__img {
+  padding: 10px;
+  margin: 10px;
+  padding-left: 10px;
+  width: 420px;
 }
 
-.padre{
-    
-    
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgb(230, 250, 151);
+.hijo {
+  height: 450px;
+  width: 380px;
+  display: flex;
+  flex-direction: column;
 }
 
-
-.contenedor{
-    display: grid;
-    grid-template-columns: (4,1fr);
-    row-gap: 15px;
-    column-gap: 15px;   
-    grid-template-rows: 100px auto 1000px 50px;
-    grid-template-areas: "header header header header"
-                         "nav nav nav nav"
-                         "main main main main"
-                        
-                         "footer footer footer footer";
+.pp {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-
-.encabezado{
-    grid-area: header;
-    background-color: aqua;
-    width: 100%;
-}
-.navegador{
-    grid-area: nav;
-    background-color: rgb(172, 249, 137);
-}
-.opciones ul li{
-
-    color: aliceblue;
-    padding: 10px;
-    display: inline-block;
-    font-size: 17px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.padre {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: rgb(230, 250, 151);
 }
 
-.principal{
-    grid-area: main;
-    height: 60px;
-    background-color: rgb(255, 165, 237);
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: space-around
+.contenedor {
+  display: grid;
+  grid-template-columns: 4, 1fr;
+  row-gap: 15px;
+  column-gap: 15px;
+  grid-template-rows: 100px auto 1000px 50px;
+  grid-template-areas: "header header header header" "nav nav nav nav" "main main main main" "footer footer footer footer";
 }
 
-.pie{
-    grid-area: footer;
-    background-color: rgb(255, 201, 115);
+.encabezado {
+  grid-area: header;
+  background-color: aqua;
+  width: 100%;
 }
 
-.imganima:hover{
-    transform: translate(10px, 10px );
-   
+.navegador {
+  grid-area: nav;
+  background-color: rgb(172, 249, 137);
+}
 
+.opciones ul li {
+  color: aliceblue;
+  padding: 10px;
+  display: inline-block;
+  font-size: 17px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.principal {
+  grid-area: main;
+  height: 60px;
+  background-color: rgb(255, 165, 237);
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+}
+
+.pie {
+  grid-area: footer;
+  background-color: rgb(255, 201, 115);
+}
+
+.imganima:hover {
+  transform: translate(10px, 10px);
+}
+
+.encabezadoScss h1 {
+  background-color: aqua;
+  width: 100%;
+  height: 70px;
+  color: rgb(255, 182, 87);
+  font-style: normal;
+  font-size: 45px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.navScss {
+  background-color: rgb(177, 249, 162);
+}
+.navScss ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.navScss ul li {
+  padding: 10px;
+  color: black;
 }
