--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,61 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&family=Ubuntu:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;600&family=Ubuntu:wght@300&display=swap');
 
+@import "_nav";
+@import "_encabezado";
+@import "_principal";
 
-h1{
-    color: rgb(255, 182, 87);
-    text-align: center;
-    font-size: 42px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+@import "_footer";
 
 
-.tamanioTarjeta {
-
-      list-style: none;
-    background-color: rgb(201, 245, 150);
-    justify-content: center;
-    text-align: center;
-
-}
-
-.tarjeta img{
-    justify-content: center;
-    align-items: center;
-    width: 500px;
-    
-}
-
-h2{
-    color: black;
-    height: 60px;
-    
-    text-align: center;
-    text-shadow: 0cm;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    background-color: rgb(255, 165, 237);
-}
-
-
-
-ul{
-    margin: 2%;
-    list-style: none;
-    font-style: normal;
-    text-align: center;
-    color: black;
-
-}
-#pieDePagina {
-
-    color: rgb(0, 0, 0);
-}
-
-.cuadrado {
-    background-color: rgb(57, 96, 96);
-    
-}
 
 
 *{
@@ -65,191 +17,10 @@ ul{
     padding: 0;
 }
 
-.caja{
-   
-    width: 505px;
-   padding-top: 20px;
-    padding: 10px;
-    padding-right: 1021px;
- /* padding-top: 10px;*/
-    border-color: rgb(160, 76, 76);
-    display: flex;
-    background-color: rgb(255, 165, 237);
-
-}
-
-.cajalista{
-    background-color: rgb(214, 244, 105);
-}
-.navbar ul li{
-    
-    list-style: none;
-
-    display: inline-block;
-    background-color: rgb(214, 244, 105);
-    padding: 10px;   
-}
-.navbar{
-    width: 100%;
-    height: 80px;
-    background-color: rgb(164, 254, 240);
-    position: fixed;
-    z-index: 20;
-}
-
-.tarjetainfo{
-
-    text-align: center;
-    display: block;
-    background-color: rgb(168, 255, 127);
-    
-}
-
-.tarjetas{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.tarjeta1{
-    
-    display: flex;
-    flex-direction: column;
-    width: 450px;
-    height: 450px;
-    align-items: center;
-    margin: 10px;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: rgb(138, 236, 154);
-
-}
-
-.tarjeta__titulo{
-    font-size: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.tarjeta__text{
-    width: 380px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: end;
-    display: flex
-    
-}
 
 
-.tarjeta__img{
-    padding: 10px;
-    margin: 10px;
-    padding-left: 10px;
-    width: 420px;
-}
 
 
-.hijo{
-    height: 450px;
-
-    width: 380px;
-    display: flex;
-    flex-direction: column;
-    
-    
-
-}
-
-.pp{
-    
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.padre{
-    
-    
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgb(230, 250, 151);
-}
 
 
-.contenedor{
-    display: grid;
-    grid-template-columns: (4,1fr);
-    row-gap: 15px;
-    column-gap: 15px;   
-    grid-template-rows: 100px auto 1000px 50px;
-    grid-template-areas: "header header header header"
-                         "nav nav nav nav"
-                         "main main main main"
-                        
-                         "footer footer footer footer";
-}
 
-
-.encabezado{
-    grid-area: header;
-    background-color: aqua;
-    width: 100%;
-}
-.navegador{
-    grid-area: nav;
-    background-color: rgb(172, 249, 137);
-}
-.opciones ul li{
-
-    color: aliceblue;
-    padding: 10px;
-    display: inline-block;
-    font-size: 17px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.principal{
-    grid-area: main;
-    height: 60px;
-    background-color: rgb(255, 165, 237);
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: space-around
-}
-
-.pie{
-    grid-area: footer;
-    background-color: rgb(255, 201, 115);
-}
-
-.imganima:hover{
-    transform: translate(10px, 10px );
-   
-
-}
-
-
-.encabezadoScss{
-
-    h1{
-        background-color: aqua;
-        width: 100%;
-        height: 70px;
-        color: rgb(255, 182, 87);
-        font-style: normal;
-        font-size: 45px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    }
-}
-
-.navScss {
-    background-color: rgb(177, 249, 162);
-    ul{
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        li{
-            padding: 10px;
-            color: black;
-        }
-
-    }
-}
