--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,10 @@
 h1 {
   color: rgb(255, 182, 87);
   text-align: center;
+  justify-content: center;
   font-size: 42px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
 }
 
 .tamanioTarjeta {
@@ -13,6 +15,11 @@ h1 {
   background-color: rgb(201, 245, 150);
   justify-content: center;
   text-align: center;
+  
+  padding: 10px;
+  margin: 20px;
+   border: 10px;
+   border-radius: 40px;
 }
 
 .tarjeta img {
@@ -29,14 +36,32 @@ h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   background-color: rgb(255, 165, 237);
+
 }
 
 ul {
-  margin: 2%;
   list-style: none;
   font-style: normal;
   text-align: center;
   color: black;
+  
+}
+a{
+  color: rgb(0, 0, 0);
+  list-style: none;
+  text-decoration: none;
+  height: 10px;
+  
+}
+
+a:hover{
+  color: rgb(0, 0, 0);
+  list-style: none;
+  text-decoration: underline;
+  
+  
+  
+  
 }
 
 #pieDePagina {
@@ -47,10 +72,6 @@ ul {
   background-color: rgb(57, 96, 96);
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
 
 .caja {
   width: 505px;
@@ -92,6 +113,11 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding: 10px;
+  margin: 20px;
+   border: 10px;
+   border-radius: 40px;
+   background-color: rgb(255, 189, 227);
 }
 
 .tarjeta1 {
@@ -126,7 +152,7 @@ ul {
 }
 
 .hijo {
-  height: 450px;
+
   width: 380px;
   display: flex;
   flex-direction: column;
@@ -192,7 +218,7 @@ ul {
 .encabezadoScss h1 {
   background-color: aqua;
   width: 100%;
-  height: 70px;
+
   color: rgb(255, 182, 87);
   font-style: normal;
   font-size: 45px;
@@ -205,9 +231,40 @@ ul {
 .navScss ul {
   list-style: none;
   display: flex;
+  flex-direction: column;
+
   justify-content: center;
 }
 .navScss ul li {
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
   color: black;
+}
+.opcionesscss{
+  background-color: aqua;
+  color: aliceblue;
+  padding: 10px;
+  display: inline-block;
+  font-size: 17px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.opcionesscss ul li{
+  color: aliceblue;
+justify-content: center;
+align-items: center;
+  display: inline-block;
+  font-size: 17px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.principal1{
+  
+  background-color: rgb(223, 249, 255);
+  justify-content: center;
+  text-align: center;
+ width: 100%;
+ padding: 10px;
+ margin: 30px;
+  border: 10px;
+  border-radius: 40px;
 }
