--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,10 +17,18 @@
     padding: 0;
 }
 
+$btn:(
+    padding: 10px 15px,
+    bordes:0,
+    radio:5px
+);
 
 
-
-
-
+.btn{
+padding: map-get($btn , padding );
+border: map-get($btn, bordes );
+border-radius: map-get($btn, radio );
+border-color: black;
+}
 
 
